# redis

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/: CODEOWNERS
cmake/: beman_redisConfig.cmake.in
docs/: design.md  redis_protocol.md  sender_model.md
examples/: CMakeLists.txt  coroutine_task_example.cpp  ping.cpp  pipeline.cpp  set_get.cpp
include/beman/redis/: config.hpp  connect.hpp  connection.hpp  error.hpp  exec.hpp  redis.hpp  request.hpp  response.hpp
include/beman/redis/detail/: pending_queue.hpp  resp_encode.hpp  resp_parse.hpp  sender.hpp  transport.hpp
src/beman/redis/: CMakeLists.txt  connection.cpp  request.cpp  resp_encode.cpp  resp_parse.cpp  response.cpp  transport.cpp
tests/beman/redis/: CMakeLists.txt  connection.test.cpp  pending_queue.test.cpp  request.test.cpp  resp_parse.test.cpp  response.test.cpp
